@@ -16,7 +16,9 @@ repositories {
 
 dependencies {
     testImplementation libs.junit.jupiter
+    testImplementation 'org.mockito:mockito-core:5.12.0'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    testRuntimeOnly 'org.slf4j:slf4j-simple:2.0.16' // fix slf4j warning
     implementation libs.guava
     
     implementation 'io.github.ollama4j:ollama4j:1.1.4' // ollama4j lib
@@ -35,11 +37,12 @@ javafx {
 }
 
 application {
-    mainClass = 'javaollama.JavaLlamaGUI'
+    mainClass = 'javaollama.JavaLlamaGui'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+    jvmArgs('-XX:+EnableDynamicAgentLoading', '-Xshare:off') // fix mockito warning on java 21 & suppress sharing warning
     testLogging {
         events "passed", "skipped", "failed"
         showStandardStreams = true
